@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+- Fixed handling of Etc/GMT[+-]XX zones. Confusingly, the POSIX interpretation
+  is that Etc/GMT+1 is 1 hour _behind_ UTC, and Etc/GMT-1 is 1 hour
+  ahead. This is the opposite of what this module started doing in the 2.38
+  release when it added support for these zones. Reportd by Matthew Horsfall
+  (#47). Changes are based on his PR #48.
+
+
 2.44    2020-11-06
 
 - The DateTime::TimeZone->offset_as_string now accepts an optional separator
